--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Daycare App</title>
+    <link rel="shortcut icon" href="/style/pokeball.gif" type="image/gif">
     <link rel="stylesheet" href="/style/style.css">
     <link rel="stylesheet" href="/style/bootstrap.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans">
