new header icon, $ sign before cost

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Daycare App</title>
-    <link rel="shortcut icon" href="/style/pokeball.gif" type="image/gif">
+    <link rel="shortcut icon" href="http://lakevalor.net/images/GreatBall.png" type="image/png">
     <link rel="stylesheet" href="/style/style.css">
     <link rel="stylesheet" href="/style/bootstrap.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans">
