--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="shortcut icon" href="http://lakevalor.net/images/GreatBall.png" type="image/png">
     <link rel="stylesheet" href="/style/style.css">
     <link rel="stylesheet" href="/style/bootstrap.css">
+    <link rel="stylesheet" href="https://unpkg.com/react-select/dist/react-select.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans">
   </head>
   <body>
