--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Daycare App</title>
+    <title>Daycare App test</title>
     <link rel="shortcut icon" href="http://lakevalor.net/images/GreatBall.png" type="image/png">
-    <link rel="stylesheet" href="/style/style.css">
+    <link rel="stylesheet" href="/ppo-daycare/style/style.css">
     <link rel="stylesheet" href="/style/bootstrap.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans">
   </head>
@@ -11,6 +11,6 @@
     <div class="container"></div>
   </body>
   <script src="/bundle.js"></script>
-  <script src="node_modules/jquery/dist/jquery.min.js"></script>
-  <script src="node_modules/bootstrap/js/modal.js"></script>
+  <!--<script src="node_modules/jquery/dist/jquery.min.js"></script>-->
+  <!--<script src="node_modules/bootstrap/js/modal.js"></script>-->
 </html>
