--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Daycare App test</title>
     <link rel="shortcut icon" href="http://lakevalor.net/images/GreatBall.png" type="image/png">
-    <link rel="stylesheet" href="/daycare-app/style/style.css">
+    <link rel="stylesheet" href="./style/style.css">
     <link rel="stylesheet" href="/style/bootstrap.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans">
   </head>
