--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Daycare App test</title>
+    <title>Daycare App test2</title>
     <link rel="shortcut icon" href="http://lakevalor.net/images/GreatBall.png" type="image/png">
-    <link rel="stylesheet" href="./style/style.css">
+
+    <link rel="stylesheet" href="/style/style.css">
+    <link href="{{ site.github.url }}/style/style.css" rel="stylesheet">
+
     <link rel="stylesheet" href="/style/bootstrap.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans">
   </head>
