--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <link rel="shortcut icon" href="http://lakevalor.net/images/GreatBall.png" type="image/png">
 
     <link rel="stylesheet" href="/style/style.css">
-    <link href="{{ site.github.url }}/fstyle/style.css" rel="stylesheet">
+    <link href="{{ site.github.url }}/style/style.css" rel="stylesheet">
 
-    <link rel="stylesheet" href="/style/bootstrap.css">
+    <link rel="stylesheet" href="{{ site.github.url }}/style/bootstrap.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans">
   </head>
   <body>
     <div class="container"></div>
   </body>
-  <script src="/bundle.js"></script>
+  <script src="{{ site.github.url }}/bundle.js"></script>
   <!--<script src="node_modules/jquery/dist/jquery.min.js"></script>-->
   <!--<script src="node_modules/bootstrap/js/modal.js"></script>-->
 </html>
