--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
+<base href="https://gouldie.github.io/daycare-app">
 <html>
   <head>
-    <title>Daycare App test5</title>
+    <title>Daycare App test6</title>
     <link rel="shortcut icon" href="http://lakevalor.net/images/GreatBall.png" type="image/png">
 
     <link rel="stylesheet" href="/style/style.css">
-    <link href="{{ site.github.url }}/style/style.css" rel="stylesheet">
+    <link href="style/style.css" rel="stylesheet">
 
-    <link rel="stylesheet" href="{{ site.github.url }}/style/bootstrap.css">
+    <link rel="stylesheet" href="/style/bootstrap.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans">
   </head>
   <body>
     <div class="container"></div>
   </body>
-  <script src="{{ site.github.url }}/bundle.js"></script>
+  <script src="/bundle.js"></script>
   <!--<script src="node_modules/jquery/dist/jquery.min.js"></script>-->
   <!--<script src="node_modules/bootstrap/js/modal.js"></script>-->
 </html>
