--- a/index.html
+++ b/index.html
@@ -6,16 +6,15 @@
     <title>Daycare App test7</title>
     <link rel="shortcut icon" href="http://lakevalor.net/images/GreatBall.png" type="image/png">
 
-    <link rel="stylesheet" href="/style/style.css">
     <link href="style/style.css" rel="stylesheet">
 
-    <link rel="stylesheet" href="/style/bootstrap.css">
+    <link rel="stylesheet" href="style/bootstrap.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans">
   </head>
   <body>
     <div class="container"></div>
   </body>
-  <script src="/bundle.js"></script>
+  <script src="bundle.js"></script>
   <!--<script src="node_modules/jquery/dist/jquery.min.js"></script>-->
   <!--<script src="node_modules/bootstrap/js/modal.js"></script>-->
 </html>
