--- a/index.html
+++ b/index.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <base href="https://gouldie.github.io/daycare-app">
-
-    <title>Daycare App test7</title>
+    <title>Daycare App test8</title>
     <link rel="shortcut icon" href="http://lakevalor.net/images/GreatBall.png" type="image/png">
 
-    <link href="style/style.css" rel="stylesheet">
+    <link href="daycare-app/style/style.css" rel="stylesheet">
 
-    <link rel="stylesheet" href="style/bootstrap.css">
+    <link rel="stylesheet" href="daycare-app/style/bootstrap.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans">
   </head>
   <body>
     <div class="container"></div>
   </body>
-  <script src="bundle.js"></script>
+  <script src="daycare-app/bundle.js"></script>
   <!--<script src="node_modules/jquery/dist/jquery.min.js"></script>-->
   <!--<script src="node_modules/bootstrap/js/modal.js"></script>-->
 </html>
