--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Daycare App test8</title>
+    <title>Daycare App test9</title>
     <link rel="shortcut icon" href="http://lakevalor.net/images/GreatBall.png" type="image/png">
 
-    <link href="daycare-app/style/style.css" rel="stylesheet">
+    <link href="/daycare-app/style/style.css" rel="stylesheet">
 
-    <link rel="stylesheet" href="daycare-app/style/bootstrap.css">
+    <link rel="stylesheet" href="/daycare-app/style/bootstrap.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans">
   </head>
   <body>
     <div class="container"></div>
   </body>
-  <script src="daycare-app/bundle.js"></script>
+  <script src="/daycare-app/bundle.js"></script>
   <!--<script src="node_modules/jquery/dist/jquery.min.js"></script>-->
   <!--<script src="node_modules/bootstrap/js/modal.js"></script>-->
 </html>
