--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Daycare App test9</title>
+    <title>Daycare App test10</title>
     <link rel="shortcut icon" href="http://lakevalor.net/images/GreatBall.png" type="image/png">
 
-    <link href="/daycare-app/style/style.css" rel="stylesheet">
+    <link href="/style/style.css" rel="stylesheet">
 
     <link rel="stylesheet" href="/daycare-app/style/bootstrap.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans">
