--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <title>Daycare App</title>
     <link rel="shortcut icon" href="http://lakevalor.net/images/GreatBall.png" type="image/png">
 
-    <link href="/daycare-app/style/style.css" rel="stylesheet">
+    <link href="style/style.css" rel="stylesheet">
 
-    <link rel="stylesheet" href="/daycare-app/style/bootstrap.css">
+    <link rel="stylesheet" href="style/bootstrap.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans">
   </head>
   <body>
     <div class="container"></div>
   </body>
-  <script src="/daycare-app/bundle.js"></script>
-  <script src="/daycare-app/style/js/jquery/dist/jquery.min.js"></script>
-  <script src="/daycare-app/style/js/bootstrap/js/modal.js"></script>
+  <script src="/bundle.js"></script>
+  <script src="/style/js/jquery/dist/jquery.min.js"></script>
+  <script src="/style/js/bootstrap/js/modal.js"></script>
 </html>
