--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Daycare App</title>
     <link rel="shortcut icon" href="http://lakevalor.net/images/GreatBall.png" type="image/png">
 
-    <link href="/ppo-daycare/style/style.css" rel="stylesheet">
+    <link href="style/style.css" rel="stylesheet">
 
     <link rel="stylesheet" href="style/bootstrap.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans">
@@ -12,7 +12,7 @@
   <body>
     <div class="container"></div>
   </body>
-  <script src="/ppo-daycare/bundle.js"></script>
-  <script src="/ppo-daycare/style/js/jquery/dist/jquery.min.js"></script>
-  <script src="/ppo-daycare/style/js/bootstrap/js/modal.js"></script>
+  <script src="bundle.js"></script>
+  <script src="style/js/jquery/dist/jquery.min.js"></script>
+  <script src="style/js/bootstrap/js/modal.js"></script>
 </html>
