new layout + bundle

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <div class="container"></div>
   </body>
-  <script src="bundle.js"></script>
-  <script src="style/js/jquery/dist/jquery.min.js"></script>
-  <script src="style/js/bootstrap/js/modal.js"></script>
+  <script src="/ppo-daycare/bundle.js"></script>
+  <script src="/ppo-daycare/style/js/jquery/dist/jquery.min.js"></script>
+  <script src="/ppo-daycare/style/js/bootstrap/js/modal.js"></script>
 </html>
