--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="style/style.css" rel="stylesheet">
 
     <link rel="stylesheet" href="style/bootstrap.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
   </head>
   <body>
     <div class="container"></div>
