--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Daycare App</title>
-    <link rel="shortcut icon" href="http://lakevalor.net/images/GreatBall.png" type="image/png">
+    <link rel="shortcut icon" href="favicon.png" type="image/png">
 
     <link href="style/style.css" rel="stylesheet">
 
